# llml

./: .gitignore  .mise.toml  CLAUDE.md  CONTRIBUTING.md  HITCHHIKER'S GUIDE.md  LICENSE  LLM.md  README.md  justfile
.claude/: CLAUDE.md  settings.local.json
.cursor/rules/: go.mdc  py.mdc  rs.mdc  spec.mdc  ts.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: claude-code-review.yml  go.yml  py.yml  rs.yml  ts.yml
docs/: hitchhikers-guide.md  llml-for-react-practitioners.md
go/: README.md  SCRATCHPAD.md  coverage.html  coverage.out  coverage_detail.out  go.mod  json_coverage.out  reflection_coverage.out  temp_coverage.out
go/tests/: 90_percent_coverage_test.go  array_direct_test.go  basic_test.go  complex_test.go  llml_test.go  (+15 more)
py/: README.md  pyproject.toml  tox.ini
py/docs/: formatters.md
py/src/: __init__.py  llml.py  utils.py
py/src/zenbase_llml/: __init__.py  llml.py  utils.py
py/src/zenbase_llml/formatters/: __init__.py  json.py  types.py
py/src/zenbase_llml/formatters/base/: __init__.py  base_model.py  bool.py  dataclass.py  datetime.py  fallback.py  float.py  int.py  none.py  str.py  timedelta.py
py/src/zenbase_llml/formatters/swag_xml/: __init__.py  helpers.py
py/src/zenbase_llml/formatters/vibe_xml/: __init__.py  dict.py  helpers.py  list.py
py/tests/: __init__.py  array_direct_test.py  basic_test.py  complex_test.py  indentation_test.py  json_formatter_test.py  kebab_case_test.py  key_preservation_test.py  lists_test.py  multiline_test.py  nested_test.py  prefix_test.py  test_llml.py  test_llml_dict_keys.py
rs/: Cargo.toml  README.md
rs/docs/: traits.md
rs/examples/: basic_usage.rs  trait_examples.rs
rs/src/: formatters.rs  lib.rs  utils.rs
rs/tests/: array_direct_formatting.rs  basic_value_formatting.rs  complex_scenarios.rs  indentation_and_prefix.rs  integration_test.rs  kebab_case_conversion.rs  list_formatting.rs  multiline_content.rs  nested_structures.rs  strict_mode.rs
ts/: .gitignore  README.md  biome.json  bun.lockb  bunup.config.ts  package.json  tsconfig.json  vitest.config.ts
(+39 files in other folders)
